change DEBUG module into ECHO
