# controllers/messages.js
@@ -7,7 +7,7 @@ module.exports = {
     /**
      * summary: 
      * description: Get the list of sending messages by multiple params.
-     * parameters: status, link, tag, start, end
+     * parameters: status, owner, tag, start, end
      * produces: application/json
      * responses: 200, default
      */
